Confirmation Url Modification

--- a/views/emails/base.ejs
+++ b/views/emails/base.ejs
@@ -52,11 +52,7 @@
                   <tbody>
                     <tr>
                       <td class="content-block">
-                        <span class="apple-link"
-                          >Natours Inc, 123 Nowhere Road, San Francisco CA
-                          99999</span
-                        ><br />
-                        Don't like these emails? <a href="#">Unsubscribe</a>
+                        <span class="apple-link">Learn@Home</span>
                       </td>
                     </tr>
                   </tbody>
