--- a/views/emails/partials/_inscription.ejs
+++ b/views/emails/partials/_inscription.ejs
@@ -1,2 +1,2 @@
-<h1>Bienvenue chez nous !</h1>
-<a href="<%= url %>">Click pour confirmer votre addresse.</a>
+<h1>Welcome !</h1>
+<a href="<%= url %>">Click here to confirm your inscription.</a>
