--- a/views/emails/partials/_styles.ejs
+++ b/views/emails/partials/_styles.ejs
@@ -6,7 +6,7 @@
   }
 
   body {
-    background-color: #f6f6f6;
+    background-color: #bb4853;
     font-family: sans-serif;
     -webkit-font-smoothing: antialiased;
     font-size: 14px;
@@ -31,7 +31,7 @@
   }
 
   .body {
-    background-color: #f6f6f6;
+    background-color: #bb4853;
     width: 100%;
   }
 
@@ -53,7 +53,8 @@
   }
 
   .main {
-    background: #ffffff;
+    background: #bb4853;
+    color: #ffffff;
     border-radius: 3px;
     width: 100%;
   }
@@ -79,7 +80,7 @@
   .footer p,
   .footer span,
   .footer a {
-    color: #999999;
+    color: #5c6b77;
     font-size: 12px;
     text-align: center;
   }
@@ -88,7 +89,7 @@
   h2,
   h3,
   h4 {
-    color: #000000;
+    color: #e6eaee;
     font-family: sans-serif;
     font-weight: 400;
     line-height: 1.4;
@@ -221,7 +222,7 @@
 
   hr {
     border: 0;
-    border-bottom: 1px solid #f6f6f6;
+    border-bottom: 1px solid #bec1ce;
     margin: 20px 0;
   }
 
