Password Forgotten E-mail Modification

--- a/views/emails/partials/_passwordReset.ejs
+++ b/views/emails/partials/_passwordReset.ejs
@@ -1,2 +1,2 @@
-<h1>Mot de passe oublié</h1>
-<a href="<%= url %>">Click pour changer votre mot de passe.</a>
+<h1>Password forgotten</h1>
+<a href="<%= url %>">Click here to reset your password.</a>
